# waysensor-rs

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  build.sh  rust-toolchain.toml
core/: Cargo.toml
core/src/: lib.rs
discover/: Cargo.toml
discover/src/: main.rs
docs/: BENCHMARKS.md
sensors/amd-gpu/: Cargo.toml
sensors/amd-gpu/src/: gpu.rs  lib.rs  main.rs  metrics.rs
sensors/amd-gpu/src/amdgpu/: formats.rs  mod.rs  reader.rs  types.rs
sensors/battery/: Cargo.toml
sensors/battery/src/: battery.rs  error.rs  lib.rs  main.rs  types.rs
sensors/cpu/: Cargo.toml
sensors/cpu/src/: cpu.rs  lib.rs  main.rs
sensors/disk/: Cargo.toml
sensors/disk/src/: disk.rs  lib.rs  main.rs  multi_disk.rs
sensors/intel-gpu/: Cargo.toml
sensors/intel-gpu/src/: intel_gpu.rs  lib.rs  main.rs
sensors/memory/: Cargo.toml
sensors/memory/src/: lib.rs  main.rs  memory.rs
sensors/network/: Cargo.toml
sensors/network/src/: auto_detect.rs  lib.rs  main.rs  network.rs
sensors/nvidia-gpu/: Cargo.toml
sensors/nvidia-gpu/src/: lib.rs  main.rs  nvidia_gpu.rs
sensors/thermal/: Cargo.toml
sensors/thermal/src/: error.rs  lib.rs  main.rs  thermal.rs
