[workspace]
resolver = "2"
members = [
    "core",
    "discover",
    "sensors/cpu",
    "sensors/memory",
    "sensors/disk",
    "sensors/network",
    "sensors/battery",
    "sensors/amd-gpu",
    "sensors/intel-gpu", 
    "sensors/nvidia-gpu",
    "sensors/thermal"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87.0"
authors = ["Simon M <simonm@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/simonm/waysensor-rs"
repository = "https://github.com/simonm/waysensor-rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ron = "0.8"
dirs = "5.0"
