[package]
name = "waysensor-rs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ron.workspace = true
dirs.workspace = true
tokio.workspace = true
