[package]
name = "waysensor-rs-discover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
waysensor-rs-core = { path = "../core" }
waysensor-rs-cpu = { path = "../sensors/cpu" }
waysensor-rs-memory = { path = "../sensors/memory" }
waysensor-rs-disk = { path = "../sensors/disk" }
waysensor-rs-network = { path = "../sensors/network" }
waysensor-rs-amd-gpu = { path = "../sensors/amd-gpu" }
waysensor-rs-battery = { path = "../sensors/battery" }
waysensor-rs-thermal = { path = "../sensors/thermal" }
clap.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dashmap = "5.0"
regex = "1.0"
glob = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rayon = "1.0"
ron = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "waysensor-rs-discover"
path = "src/main.rs"

# [[bin]]
# name = "hardware-scan"
# path = "src/bin/hardware_scan.rs"
# 
# [[bin]]
# name = "system-profile"
# path = "src/bin/system_profile.rs"
