[package]
name = "waysensor-rs-disk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
waysensor-rs-core = { path = "../../core" }
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"

